--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^6.1.2",
+    "@ngrx/store-devtools": "^6.1.2",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "latest": "^0.2.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
