--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +26,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "firebase": "^5.7.0",
+    "font-awesome": "^4.7.0",
     "latest": "^0.2.0",
     "node-sass": "^4.11.0",
     "rxjs": "~6.3.3",
